fix: update meta tags to improve seo

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,25 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!-- Primary Meta Tags -->
+		<title>Scorescribe - Never lose your game results</title>
+		<meta name="title" content="Scorescribe - Never lose your game progress" />
+		<meta name="description" content="With scorescribe you'll never have to remember the results of any friendly games with your loved ones!" />
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://scorescribe.tech/" />
+		<meta property="og:title" content="Scorescribe - Never lose your game results" />
+		<meta property="og:description" content="With scorescribe you'll never have to remember the results of any friendly games with your loved ones!" />
+		<meta property="og:image" content="https://scorescribe.tech/images/sk-logo.png" />
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://scorescribe.tech/" />
+		<meta property="twitter:title" content="Scorescribe - Never lose your game results" />
+		<meta property="twitter:description" content="With scorescribe you'll never have to remember the results of any friendly games with your loved ones!" />
+		<meta property="twitter:image" content="https://scorescribe.tech/images/sk-logo.png" />
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
